Fix-ABC-1451-Profile-Card-Avatar-Overflow

--- a/src/modules/base/profileCard/profileCard.css
+++ b/src/modules/base/profileCard/profileCard.css
@@ -54,7 +54,6 @@ article.avonni-profile-card {
     width: 9.25rem;
     transition: border-color 0.2s ease;
     z-index: 50;
-    overflow: hidden;
     object-fit: cover;
 }
 
@@ -62,6 +61,13 @@ article.avonni-profile-card {
     height: 100%;
     width: 100%;
     border-radius: 50%;
+}
+.avonni-profile-card__avatar-wrapper {
+    position: relative;
+    overflow: hidden;
+    z-index: -10;
+    width: 100%;
+    height: 100%;
 }
 
 .avonni-profile-card__avatar_size-x-small {
@@ -114,11 +120,17 @@ article.avonni-profile-card {
     min-height: 182px;
 }
 
+.avonni-profile-card__icon-wrapper {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+    z-index: -10;
+}
+
 .avonni-profile-card__lightning-icon {
     align-items: center;
     justify-self: center;
-    max-width: 100%;
-    max-height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -137,7 +149,7 @@ article.avonni-profile-card {
 }
 
 .avonni-profile-card__lightning-icon_size-large {
-    scale: 4.5;
+    scale: 4.8;
 }
 
 .avonni-profile-card__lightning-icon_size-x-large {
